# Yare

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
Data/: settings
Data/Shaders/: Blur.frag  GUIQuad.frag  GUIQuad.vert  Normal.frag  Screen.frag  Sobel.frag  Static.frag  Static.vert  Terrain.frag  Terrain.vert  Water.frag  Water.vert
Data/Textures/: CREDITS.txt
scripts/: build.sh  debug.sh  run.sh
src/: Maths.cpp  main.cpp
src/Client/: Camera.cpp  Camera.h  ClientSettings.cpp
src/Client/Renderer/: Colour.h  Framebuffer.cpp  Framebuffer.h  GLDebug.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Client/Screen/: InGameScreen.cpp  InGameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  Screen.cpp  Screen.h
